added new images labeled for reuse, adjusted everyting for every available media query

--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ strong, small {
     height: 100%;
     position: absolute;
     overflow: hidden;
-    background: url(../images/night.jpg) #444 50% 50%;
+    background: url(../images/bg.jpg) #444 50% 50%;
     background-size: cover;
 }
 
@@ -428,7 +428,6 @@ h2.menu-item:hover:after {
 
 .social {
     position: absolute;
-    bottom: 15%;
 }
 
 .social li {
@@ -1509,6 +1508,7 @@ ul.info-list li strong {
 	}
 }
 
+
 @media (min-width:1280px) and (max-width:1919px) {
 
     .name-block {
@@ -1552,54 +1552,141 @@ ul.info-list li strong {
     }
 }
 
-@media (min-width:1025px) and (max-width:1280px) {
+@media (max-width:1550px) and (min-width:1323px)  {
+
+    .menu-block{
+        width: 350px;
+        height: 350px;
+    }
 
     .name-block {
-        -ms-transform: rotate(-34deg);
-        -webkit-transform: rotate(-34deg);
-        transform: rotate(-34deg);
-        left: -200px;
-        top: -80px;
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 94px;
+        top: 124px;
     }
 
     .about-block {
-        -ms-transform: rotate(-34deg);
-        -webkit-transform: rotate(-34deg);
-        transform: rotate(-34deg);
-        left: 419px;
-        top: -160px;
-    		width:350px;
-    		height: 300px;
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 779px;
+        top: 88px;
     }
 
     .portfolio-block {
-        -ms-transform: rotate(-34deg);
-        -webkit-transform: rotate(-34deg);
-        transform: rotate(-34deg);
-        left: 586px;
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 745px;
+        top: 580px;
+    }
+
+
+    .contact-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 1008px;
+        top: 350px;
+    }
+
+    .name-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .about-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .portfolio-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .contact-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+}
+
+
+@media (min-width:1025px) and (max-width:1280px) {
+
+    .menu-block{
+        width: 350px;
+        height: 350px;
+    }
+
+    .name-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: -154px;
+        top: 124px;
+    }
+
+    .about-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 533px;
         top: 88px;
-		width:350px;
-		height: 300px;
+    }
+
+    .portfolio-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 498px;
+        top: 580px;
     }
 
     .blog-block {
-        -ms-transform: rotate(-34deg);
-        -webkit-transform: rotate(-34deg);
-        transform: rotate(-34deg);
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
         left: 753px;
         top: 335px;
-		width:350px;
-		height: 300px;
     }
 
     .contact-block {
-        -ms-transform: rotate(-34deg);
-        -webkit-transform: rotate(-34deg);
-        transform: rotate(-34deg);
-        left: 900px;
-        top: -70px;
-		width:350px;
-		height: 300px;
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 762px;
+        top: 350px;
+    }
+
+    .name-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .about-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .portfolio-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .contact-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
     }
 }
 
@@ -1609,7 +1696,7 @@ ul.info-list li strong {
         -ms-transform: rotate(-41deg);
         -webkit-transform: rotate(-41deg);
         transform: rotate(-41deg);
-        left: 296px;
+        left: 316px;
         top: 18px;
         width: 450px;
         height: 450px;
@@ -1619,7 +1706,7 @@ ul.info-list li strong {
         -ms-transform: rotate(-41deg);
         -webkit-transform: rotate(-41deg);
         transform: rotate(-41deg);
-        left: 78px;
+        left: 96px;
         top: 368px;
         height: 350px;
         width: 350px;
@@ -1629,7 +1716,7 @@ ul.info-list li strong {
         -ms-transform: rotate(-41deg);
         -webkit-transform: rotate(-41deg);
         transform: rotate(-41deg);
-        left: 308px;
+        left: 326px;
         top: 632px;
         height: 350px;
         width: 350px;
@@ -1639,7 +1726,7 @@ ul.info-list li strong {
         -ms-transform: rotate(-41deg);
         -webkit-transform: rotate(-41deg);
         transform: rotate(-41deg);
-        left: 571px;
+        left: 590px;
         top: 401px;
         height: 350px;
         width: 350px;
@@ -1704,7 +1791,7 @@ ul.info-list li strong {
 
 @media (min-width:768px) and (max-width:980px) {
 
-    .name-block {
+    /* .name-block {
         -ms-transform: rotate(-34deg);
         -webkit-transform: rotate(-34deg);
         transform: rotate(-34deg);
@@ -1738,6 +1825,87 @@ ul.info-list li strong {
 
 	.project {
 		width: 50%;
+    } */
+
+    .name-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 316px;
+        top: 18px;
+        width: 450px;
+        height: 450px;
+    }
+
+    .about-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 96px;
+        top: 368px;
+        height: 350px;
+        width: 350px;
+    }
+
+    .contact-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 326px;
+        top: 632px;
+        height: 350px;
+        width: 350px;
+    }
+
+    .portfolio-block {
+        -ms-transform: rotate(-41deg);
+        -webkit-transform: rotate(-41deg);
+        transform: rotate(-41deg);
+        left: 590px;
+        top: 401px;
+        height: 350px;
+        width: 350px;
+    }
+
+    .name-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+        padding-left: 0;
+        text-align: center;
+    }
+
+    .about-block-container{
+        padding-left: 110px;
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .portfolio-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        transform: rotate(41deg);
+    }
+
+    .contact-block-container{
+        -ms-transform: rotate(41deg);
+        -webkit-transform: rotate(41deg);
+        padding-left: 50px;
+        transform: rotate(41deg);
+    }
+
+    .social{
+        left: 35%;
+        bottom: 10%;
+    }
+
+    .service {
+        width: 50%;
+    }
+
+    .skills .col-md-6 {
+        width: 100%;
     }
 }
 
@@ -1757,7 +1925,8 @@ ul.info-list li strong {
 
 @media (max-width:800px) and (orientation:landscape) {
 	.home {
-		background: url(../images/bg.jpg) #444 30% 30%;
+		background: url(../images/bg.jpg) #444;
+        background-size: cover;
 		overflow-y: scroll;
 	}
 
@@ -1829,7 +1998,7 @@ ul.info-list li strong {
 @media (max-width:800px) {
 
 	.home {
-		background: url(../images/bg.jpg) #444 30% 30%;
+		background: url(../images/bgmobile.jpg) #444 30% 30%;
         overflow-y: scroll;
 	}
 
