--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,8 @@ h2.menu-item:hover:after {
 
 .sign {
     margin-top: 30px;
+    border-radius: 50%;
+    border: 1px solid black;
 }
 
 ul.info-list {
