--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@
 	9. RESPONSIVE
 
 -------------------------------------------------------------------*/
-
 /* -------------------------
         0. standard
 ------------------------- */
@@ -98,7 +97,7 @@ h6 {
 }
 
 p {
-    margin: 0;
+    margin: 20px 0;
 }
 
 ul {
@@ -108,6 +107,18 @@ ul {
 
 strong, small {
     color: #444;
+}
+
+a{
+    text-decoration: none;
+}
+
+li{
+    list-style-type: none;
+}
+
+figurecaption{
+    text-transform: uppercase;
 }
 
 .btn {
@@ -491,6 +502,7 @@ h2.menu-item:hover:after {
 
 .sign {
     margin-top: 30px;
+    margin-left: 65px;
     border-radius: 50%;
     border: 1px solid black;
 }
@@ -1378,6 +1390,11 @@ ul.info-list li strong {
 /* -------------------------
         8. CONTENT BLOCKS
 ------------------------- */
+header{
+    margin: 50px 0;
+}
+
+
 .inline-menu-container {
     background: #F1F3F6;
     position: fixed;
@@ -1389,6 +1406,7 @@ ul.info-list li strong {
 #post-modal .inline-menu-container,
 #project-modal .inline-menu-container {
 	height: 40px;
+    padding-right: 30px;
 }
 
 #modal-close.close {
@@ -1434,6 +1452,7 @@ ul.info-list li strong {
 #post-modal,
 #project-modal {
 	z-index: 99999;
+    padding: 0 20px;
 }
 
 .content {
