change project img, code link and live link for triviaFighter, added favicons for source and live

--- a/css/style.css
+++ b/css/style.css
@@ -937,6 +937,10 @@ ul.info-list li strong {
     outline: none;
 }
 
+.modal-content{
+    padding-left: 15px;
+}
+
 .project-title h2 {
 	margin-bottom: 20px;
 }
